k8s/deployment/part3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foodgram-ingress
  namespace: foodgram
spec:
  ingressClassName: nginx
  rules:
  - host: foodgram.localhost.ru
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
      - path: /media
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
